--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,15 +10,15 @@
             <div class="column has-text-left-desktop has-text-centered-mobile">
                 <a href="{{site.url}}{{site.baseurl}}/#about">
                     <div class="columns">
-                        <div class="column is-one-fifth-desktop is-one-fifth-fullhd is-one-quarter-tablet">
-                            <figure class="image is-64x64">
+                        <div class="column is-one-fifth-desktop is-one-fifth-fullhd is-one-fifth-tablet">
+                            <figure class="image is-72x72">
                                 <img class="is-rounded" src="{{site.author-image}}">
                             </figure>
                         </div>
                         <div class="column is-marginless">
                             <h5 class="has-text-grey-lighter">{{site.author-name}}</h5>
                             <div class="content has-text-grey">
-                                <p>{{site.author-about | truncate: 75 }}</p>
+                                <p>{{site.author-about | truncate: 166 }}</p>
                             </div>
                         </div>
                     </div>
@@ -31,12 +31,11 @@
                 {% for sitepage in site.html_pages offset: 4 %}
                 {% unless sitepage.url == '/'  limit: 2 %}
                 <li>
-                    <a href="{{sitepage.url | absolute_url}}">{{sitepage.title}}</a>
+                    <a href="https://unsplash.com/photos/kluhXsuW7Is">unsplash.com</a>
                 </li>
                 {% endunless %}
                 {% endfor %}
-                <li>
-                    <a target="_blank" href="{{site.url}}{{site.baseurl}}/feed.xml">Subscribe via RSS</a>
+               
                 </li>
             </div>
 
