--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,7 +1,7 @@
 <section class="hero is-fullheight has-text-centered" id="hero">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title has-text-white is-size-1 is-uppercase has-text-weight-bold">
+      <h1 class="title has-text-white is-size-2 is-uppercase has-text-weight-medium">
         {{site.title}}
       </h1>
       <h3 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless">
@@ -9,7 +9,7 @@
       </h3>
       <hr>
       <a href="{{site.url}}{{site.baseurl}}/#about"
-        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Read More</a>
+        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">About Me</a>
       </a>
     </div>
   </div>
