--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -17,7 +17,7 @@ layout: compress
         <div class="hero-body">
             <div class="container has-text-centered">
                 <div class="section">
-                    <p class="subtitle is-uppercase has-text-weight-medium has-text-grey">Have a Good Read</p>
+                    <p class="subtitle is-uppercase has-text-weight-bold has-text-black">Data Science Projects</p>
                 </div>
                 {% include project-card.html %}
             </div>
