--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,7 +46,7 @@ a.navbar-item.is-active {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000", endColorstr="#000000", GradientType=1);
 
     &::before {
-        filter: blur(0.15rem);
+        filter: blur(0.05rem);
         background-image: url({{site.heroimage}});
         background-position: center;
         background-repeat: no-repeat;
@@ -57,7 +57,7 @@ a.navbar-item.is-active {
         bottom: 0px;
         left: 0px;
         position: absolute;
-        opacity: 0.25;
+        opacity: 0.50;
         content: "";
     }
 }
@@ -74,7 +74,7 @@ a.navbar-item.is-active {
         margin: auto;
 
         img {
-            border: 0.25rem dotted black;
+            border: 0.25rem solid black;
         }
     }
 
@@ -233,7 +233,7 @@ a.navbar-item.is-active {
             }
 
             figure {
-                border: 1.5px solid white;
+                border: 1.5px solid black;
                 border-radius: 50rem;
                 justify-content: center;
                 margin: auto;
